# somePhysicalCalculations

./: .gitignore  CMakeLists.txt  complie_.sh
CalculateStokesParameter/: CalculateStokesParameter.cpp  CalculateStokesParameter.json5  CalculateStokesParameter.out  StokesParameter.txt  compile.sh
DrawRadiationPlots/: 30m_0.02_0.1.txt  30m_2_0.1.txt  DrawRadiationPlots.cpp  DrawRadiationPlots.json  DrawRadiationPlots.json5  DrawRadiationPlots.out
DrawRadiationPlots2/: 30m_2_0.1_allFalse.txt  DrawRadiationPlots.cpp  DrawRadiationPlots.json5  DrawRadiationPlots.out
DrawRadiationPlotsWithDoubledLabel/: 30m_0_1_0_4000_1.txt  DrawRadiationPlots.cpp  DrawRadiationPlots.json5  DrawRadiationPlots.out  compile.sh
NumericalSolutions/NumericalSolutionOfElectronInCounterpropagatingLaser/: NumericalSolutionOfElectronInCounterpropagatingLaser.cpp  NumericalSolutionOfElectronInCounterpropagatingLaser.h  complie.sh
NumericalSolutions/NumericalSolveOfMotionEquationBase/: NumericalSolveOfMotionEquationBase.cpp  NumericalSolveOfMotionEquationBase.h  complie.sh
NumericalSolutions/NumericalSolveOfMotionEquationWithInitPositionAndInitMomentum/: NumericalSolveOfMotionEquationWithInitPositionAndInitMomentum.cpp  NumericalSolveOfMotionEquationWithInitPositionAndInitMomentum.h  complie.sh
calculation/: .test.cpp.swp  compile.sh  downdown+.txt  downdown-.txt  downup+.txt  emissionIntensityAndPolarization.txt  output.txt  result3.txt  spectralComponent.txt  test  test.cpp  test.txt  upup+.txt  upup-.txt
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  test
differentialEquation/: complie.sh  test  test.cpp
plots/: 3DPlot.html  test.html
test/: compile.sh  test  test.cpp
vortexRadiation/: 1G_1.txt  1G_2_0_0.1_2000div.txt  DrawRadiationPlots.cpp  DrawRadiationPlots.json5  DrawRadiationPlots.out
(+31 files in other folders)
